Feat remove friend (#37)
* feat: refactor users and split, feat deleteFriend

* feat: add deleteFriend

* feat: delete friend

* refactor: get friend directly

* refactor: useFriend

* refactor: import mouseEvent module

* fix: add empty check
